--- a/chat_socketio/index.html
+++ b/chat_socketio/index.html
@@ -26,7 +26,7 @@
         <input id="input" autocomplete="off" /><button>Send</button>
     </form>
     <p>
-      <div>Aktuell Online: <span id="onlineUser">Der da</span></div>
+      <div>Aktuell Online: <span id="onlineUser">...wähle zuerst einen Namen</span></div>
     </p>
     <script src="/socket.io/socket.io.js"></script>
     <script>
