--- a/zilch_server/zilch.html
+++ b/zilch_server/zilch.html
@@ -48,6 +48,9 @@
             </div>
         </div>
     </body>
+    <script>
+      $('#')
+    </script>
     <!-- <script> // Eventlistener
         const gameValues = init();                           // creates gameValues and makes them accessable global
         rollUnholdDice(1);                                  // roll all dice onload and define random values
