--- a/zilch_server/zilch.html
+++ b/zilch_server/zilch.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" href="./zilch.css">
     </head>
     <body>
+      <div id="nameDiv" class="topLine">
+        <form id="nameForm">
+          <input id="nameInput" autocomplete="off" /><button>Name übermitteln</button>
+        </form>
+      </div>
         <div class="upperStuff">
             <div class="containerLeft">
                 <div id="diceContainer" class="allDice">
@@ -48,15 +53,16 @@
             </div>
         </div>
     </body>
+
+    // Eventlistener
     <script>
-      $('#')
+      $('#nameInput').on('submit', (e) => {
+        e.preventDefault();
+        let name = $(#'nameInput').value;
+        if(name!="") {
+          socket.emit('registerPlayer', name);
+          $("#nameForm").setAttribute("hidden", true);
+        };
+      });
     </script>
-    <!-- <script> // Eventlistener
-        const gameValues = init();                           // creates gameValues and makes them accessable global
-        rollUnholdDice(1);                                  // roll all dice onload and define random values
-        const wuerfelIDs = getWuerfelIDs();
-        registerHoldListener();                             // creates listener for click on dice to hold / unhold
-        registerButtonListerner();                          // creates listener for buttons in UI
-        registerCounterListener();                          // creates listener for analyze of points after each hold
-    </script> -->
 </html>
