--- a/zilch_server/zilch.html
+++ b/zilch_server/zilch.html
@@ -3,12 +3,6 @@
         <meta charset="utf-8">
         <title>Zilch-The Game</title>
         <link rel="stylesheet" href="./zilch.css">
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="/jquery-3.6.0.min.js"></script>
-        <script src="/zilch.js"></script>
-        <script>
-        let socket = io();
-        </script>
     </head>
     <body>
       <div id="nameDiv" class="topLine">
@@ -16,76 +10,62 @@
           <input id="nameInput" autocomplete="off" /><button>Name übermitteln</button>
         </form>
       </div>
-        <div class="upperStuff">
-            <div class="containerLeft">
-                <div id="diceContainer" class="allDice">
-                    <img id="wuerfelEins" src="one.png" alt="wuerfel1"><br>
-                    <img id="wuerfelZwei" src="two.png" alt="wuerfel2"><br>
-                    <img id="wuerfelDrei" src="three.png" alt="wuerfel3"><br>
-                    <img id="wuerfelVier" src="four.png" alt="wuerfel4"><br>
-                    <img id="wuerfelFuenf" src="five.png" alt="wuerfel5"><br>
-                    <img id="wuerfelSechs" src="six.png" alt="wuerfel6">
-                </div>
-            </div>
-            <div class="containerMidLeft">
-                <input id="knopf1" type="button" value="Würfeln"><br><br>
-                <input id="knopf2" type="button" value="Anschreiben"><br><br>
-                <input id="knopf3" type="button" value="Zilch"><br><br>
-                <p id="sondertext">&NonBreakingSpace;</p>
-            </div>
-            <div class="containerMidRight">
-                <p><span id="spielerName1">Name</span> hat in diesem Durchgang <br><b id="punkteAnzeige">0</b><br>Punkte gewürfelt.</p>
-            </div>
-            <div class="containerPlayerOne">
-                <p id="namePlayer1">Spieler 1</p>
-                <table id="punkteTabelle0">
-                    <tr>
-                        <th>Durchgang</th>
-                        <th>Neue Punkte dazu</th>
-                        <th>Total Punkte</th>
-                    </tr>
-                </table>
-            </div>
-            <div class="containerPlayerOne">
-                <p id="namePlayer2">Spieler 2</p>
-                <table id="punkteTabelle1">
-                    <tr>
-                        <th>Durchgang</th>
-                        <th>Neue Punkte dazu</th>
-                        <th>Total Punkte</th>
-                    </tr>
-                </table>
-            </div>
-            <div class="playerList">
-              <p id="allPlayer">Spieler Online:</p>
-              <table id="playerOnlineList">
-                <tr>
-                  <th>Name</th>
-                  <th>Socket ID</th>
-                </tr>
-              </table>
+      <div id="lobby" class="lobby">
+        <div class="playerList">
+          <p id="allPlayer">Spieler Online:</p>
+          <table id="playerOnlineList">
+            <tr>
+              <th>Name</th>
+              <th>Socket ID</th>
+            </tr>
+          </table>
         </div>
+        <button onclick="createGame()">Create Game</button>
+      </div>
+        <div class="upperStuff">
+          <div class="containerLeft">
+              <div id="diceContainer" class="allDice">
+                  <button onclick="leaveGame()">Leave Game</button>
+                  <img id="wuerfelEins" src="one.png" alt="wuerfel1"><br>
+                  <img id="wuerfelZwei" src="two.png" alt="wuerfel2"><br>
+                  <img id="wuerfelDrei" src="three.png" alt="wuerfel3"><br>
+                  <img id="wuerfelVier" src="four.png" alt="wuerfel4"><br>
+                  <img id="wuerfelFuenf" src="five.png" alt="wuerfel5"><br>
+                  <img id="wuerfelSechs" src="six.png" alt="wuerfel6">
+              </div>
+          </div>
+          <div class="containerMidLeft">
+              <input id="knopf1" type="button" value="Würfeln"><br><br>
+              <input id="knopf2" type="button" value="Anschreiben"><br><br>
+              <input id="knopf3" type="button" value="Zilch"><br><br>
+              <p id="sondertext">&NonBreakingSpace;</p>
+          </div>
+          <div class="containerMidRight">
+              <p><span id="spielerName1">Name</span> hat in diesem Durchgang <br><b id="punkteAnzeige">0</b><br>Punkte gewürfelt.</p>
+          </div>
+          <div class="containerPlayerOne">
+              <p id="namePlayer1">Spieler 1</p>
+              <table id="punkteTabelle0">
+                  <tr>
+                      <th>Durchgang</th>
+                      <th>Neue Punkte dazu</th>
+                      <th>Total Punkte</th>
+                  </tr>
+              </table>
+          </div>
+          <div class="containerPlayerOne">
+              <p id="namePlayer2">Spieler 2</p>
+              <table id="punkteTabelle1">
+                  <tr>
+                      <th>Durchgang</th>
+                      <th>Neue Punkte dazu</th>
+                      <th>Total Punkte</th>
+                  </tr>
+              </table>
+          </div>
+      </div>
+      <script src="/socket.io/socket.io.js"></script>
+      <script src="/jquery-3.6.0.min.js"></script>
+      <script src="/zilch.js"></script>
     </body>
-
-    <!-- Eventlistener -->
-
-    <!-- // Submit Username & get back Playerlist -->
-    <script>
-      $('#nameForm').on('submit', (e) => {
-        e.preventDefault();
-        let name = document.getElementById('nameInput').value;
-        if(name!="") {
-          socket.emit('registerPlayer', name);
-          $('#nameForm').attr('hidden', true);
-        };
-      });
-
-      socket.on('updatePlayerList', (msg) => {
-        $('#playerOnlineList').html('<tr><th>Name</th><th>Socket ID</td></tr>');
-        for(k in msg)
-        {
-          $('#playerOnlineList tr:last').after('<tr><td>'+msg[k]+'</td><td>'+k);
-        };
-      });
-    </script>
 </html>
