refinement goes on

--- a/zilch_server/zilch.html
+++ b/zilch_server/zilch.html
@@ -31,17 +31,22 @@
             </tr>
         </table>
     </div>
-    <button onclick="createGame()">Create Game</button>
+    <button onclick="createGame()">Neues Spiel erstellen</button><br>
+    <!-- available games -->
+    <div id="availableGames">
+    </div>
 </div>
 
 <!-- GAME --------------------------- -->
 
 <a name="game"></a>
 
+<div id="leaveGameButton">
+  <!-- <button onclick="leaveGame()">Spiel verlassen</button> -->
+</div>
 <div class="upperStuff page">
     <div class="containerLeft">
         <div id="diceContainer" class="allDice">
-            <button onclick="leaveGame()">Leave Game</button>
             <img id="wuerfelEins" src="one.png" alt="wuerfel1"><br>
             <img id="wuerfelZwei" src="two.png" alt="wuerfel2"><br>
             <img id="wuerfelDrei" src="three.png" alt="wuerfel3"><br>
