rearranged activeGames, first roll random working,

--- a/zilch_server/zilch.html
+++ b/zilch_server/zilch.html
@@ -89,5 +89,6 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="/jquery-3.6.0.min.js"></script>
 <script src="/zilch.js"></script>
+<script>holdListener()</script>
 </body>
 </html>
