processed several smaller issues

--- a/zilch_server/zilch.html
+++ b/zilch_server/zilch.html
@@ -90,5 +90,7 @@
 <script src="/jquery-3.6.0.min.js"></script>
 <script src="/zilch.js"></script>
 <script>holdListener()</script>
+<script>registerCounterListener()</script>
+<script>registerButtonListener()</script>
 </body>
 </html>
