--- a/zilch_server/zilch.html
+++ b/zilch_server/zilch.html
@@ -44,7 +44,7 @@
 <div id="leaveGameButton">
   <!-- <button onclick="leaveGame()">Spiel verlassen</button> -->
 </div>
-<div class="upperStuff page">
+<div id="mainGame" class="upperStuff page">
     <div class="containerLeft">
         <div id="diceContainer" class="allDice">
             <img id="wuerfelEins" src="one.png" alt="wuerfel1"><br>
