--- a/zilch_server/zilch.html
+++ b/zilch_server/zilch.html
@@ -10,18 +10,18 @@
 <!-- LANDING --------------------------- -->
 <a name="landing"></a>
 
-<div id="nameDiv" class="topLine page">
+<!-- <div id="nameDiv" class="topLine page">
     <form id="nameForm">
         <input id="nameInput" autocomplete="off"/>
         <button>Name übermitteln</button>
     </form>
-</div>
+</div> -->
 
 
 <!-- LOBBY --------------------------- -->
 
 <a name="lobby"></a>
-<div id="lobby" class="lobby page">
+<!-- <div id="lobby" class="lobby page">
     <div class="playerList">
         <p id="allPlayer">Spieler Online:</p>
         <table id="playerOnlineList">
@@ -35,7 +35,7 @@
     <!-- available games -->
     <div id="availableGames">
     </div>
-</div>
+</div> -->
 
 <!-- GAME --------------------------- -->
 
@@ -44,7 +44,7 @@
 <div id="leaveGameButton">
   <!-- <button onclick="leaveGame()">Spiel verlassen</button> -->
 </div>
-<div id="mainGame" class="upperStuff page">
+<!-- <div id="mainGame" class="upperStuff page">
     <div class="containerLeft">
         <div id="diceContainer" class="allDice">
             <img id="wuerfelEins" src="one.png" alt="wuerfel1"><br>
@@ -85,7 +85,7 @@
             </tr>
         </table>
     </div>
-</div>
+</div> -->
 <script src="/socket.io/socket.io.js"></script>
 <script src="/jquery-3.6.0.min.js"></script>
 <script src="/zilch.js"></script>
